--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="./css/font-style.css">
     <link rel="stylesheet" href="./css/style.min.css">
-    <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>SPACON Music</title>
 </head>
@@ -48,6 +47,21 @@
 
                 <section class="left-section">
 
+                    <div class="language-buttons">
+                        <button class="button-active">RU</button>
+                        <button>EN</button>
+                    </div>
+
+                    <div class="mini-vidget-links">
+                        <div class="soundcloud-block">
+                            <a href="#"><span class="icon-soundcloud"></span>Soundcloud</a>
+                        </div>
+
+                        <div class="vkgroup-block">
+                            <a href="#"><span class="icon-vk"></span>VK Group</a>
+                        </div>
+                    </div>
+
                     <div class="main_title-block">
                         <h1 class="main_header" data-key="released-albums">Все выпущенные альбомы</h1>
                     </div>
@@ -69,9 +83,15 @@
 
                                     <!-- <h4></h4> -->
 
-                                    <p><span data-key="album-genre">Жанр:</span>Trap / Future Bass</p>
-                                    <p><span data-key="album-date">Дата релиза:</span> 24.09.2023</p>
-                                    <p><span data-key="album-tracks">Количество треков:</span> 10</p>
+                                    <div><span data-key="album-genre">Жанр:</span>
+                                        <p>Trap / Future Bass</p>
+                                    </div>
+                                    <div><span data-key="album-date">Дата релиза:</span>
+                                        <p>24.09.2023</p>
+                                    </div>
+                                    <div><span data-key="album-tracks">Количество треков:</span>
+                                        <p>10</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -92,9 +112,15 @@
 
                                     <!-- <h4></h4> -->
 
-                                    <p><span data-key="album-genre">Жанр:</span> Dance / Future Bass</p>
-                                    <p><span data-key="album-date">Дата релиза:</span> 07.01.2022</p>
-                                    <p><span data-key="album-tracks">Количество треков:</span> 9</p>
+                                    <div><span data-key="album-genre">Жанр:</span>
+                                        <p>Dance / Future Bass</p>
+                                    </div>
+                                    <div><span data-key="album-date">Дата релиза:</span>
+                                        <p>07.01.2022</p>
+                                    </div>
+                                    <div><span data-key="album-tracks">Количество треков:</span>
+                                        <p>9</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -116,9 +142,15 @@
 
                                     <!-- <h4></h4> -->
 
-                                    <p><span data-key="album-genre">Жанр:</span> Chillout / Ambient</p>
-                                    <p><span data-key="album-date">Дата релиза:</span> 07.01.2022</p>
-                                    <p><span data-key="album-tracks">Количество треков:</span> 11</p>
+                                    <div><span data-key="album-genre">Жанр:</span>
+                                        <p>Chillout / Ambient</p>
+                                    </div>
+                                    <div><span data-key="album-date">Дата релиза:</span>
+                                        <p>07.01.2022</p>
+                                    </div>
+                                    <div><span data-key="album-tracks">Количество треков:</span>
+                                        <p>11</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -141,9 +173,15 @@
 
                                     <!-- <h4></h4> -->
 
-                                    <p><span data-key="album-genre">Жанр:</span> Chillout / Future Bass</p>
-                                    <p><span data-key="album-date">Дата релиза:</span> 10.06.2017</p>
-                                    <p><span data-key="album-tracks">Количество треков:</span> 3</p>
+                                    <div><span data-key="album-genre">Жанр:</span>
+                                        <p>Chillout / Future Bass</p>
+                                    </div>
+                                    <div><span data-key="album-date">Дата релиза:</span>
+                                        <p>10.06.2017</p>
+                                    </div>
+                                    <div><span data-key="album-tracks">Количество треков:</span>
+                                        <p>3</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -166,9 +204,15 @@
 
                                     <!-- <h4></h4> -->
 
-                                    <p><span data-key="album-genre">Жанр:</span> Chillout / Future Bass</p>
-                                    <p><span data-key="album-date">Дата релиза:</span> 02.08.2017</p>
-                                    <p><span data-key="album-tracks">Количество треков:</span> 4</p>
+                                    <div><span data-key="album-genre">Жанр:</span>
+                                        <p>Chillout / Future Bass</p>
+                                    </div>
+                                    <div><span data-key="album-date">Дата релиза:</span>
+                                        <p>02.08.2017</p>
+                                    </div>
+                                    <div><span data-key="album-tracks">Количество треков:</span>
+                                        <p>4</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
