--- a/3-page.html
+++ b/3-page.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="./css/font-style.css">
     <link rel="stylesheet" href="./css/style.min.css">
-    <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>SPACON Music</title>
 </head>
@@ -18,8 +17,8 @@
     <div class="background-wrapper-gif"></div>
 
     <div class="language-buttons">
-        <a class="button-active" href="#">RU</a>
-        <a href="#">EN</a>
+        <button class="button-active">RU</button>
+        <button>EN</button>
     </div>
 
     <div class="container">
@@ -33,10 +32,11 @@
                         class="header_logo"><span>SPACON <br>
                         MUSIC</span></a>
 
-                <a class="header_button" href="https://masamunebalex.github.io/spacon-links/">Музыкальные
+                <a class="header_button" href="https://masamunebalex.github.io/spacon-links/"
+                    data-key="music-link">Музыкальные
                     площадки</a>
 
-                <a class="header_button" href="#">Информация</a>
+                <a class="header_button" href="#" data-key="info-link">Информация</a>
             </nav>
             <!-- </div> -->
         </header>
@@ -48,7 +48,7 @@
                 <section class="left-section">
 
                     <div class="main_title-block">
-                        <h1 class="main_header">Все выпущенные альбомы</h1>
+                        <h1 class="main_header" data-key="released-albums">Все выпущенные альбомы</h1>
                     </div>
 
                     <div class="main_albums">
@@ -68,9 +68,15 @@
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Lo-Fi</p>
-                                    <p>Дата релиза: 19.02.2021</p>
-                                    <p>Количество треков: 10</p>
+                                    <div><span data-key="album-genre">Жанр:</span>
+                                        <p>Lo-Fi</p>
+                                    </div>
+                                    <div><span data-key="album-date">Дата релиза:</span>
+                                        <p>19.02.2021</p>
+                                    </div>
+                                    <div><span data-key="album-tracks">Количество треков:</span>
+                                        <p>10</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -91,9 +97,15 @@
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Chillout / Future Bass</p>
-                                    <p>Дата релиза: 07.10.2020</p>
-                                    <p>Количество треков: 8</p>
+                                    <div><span data-key="album-genre">Жанр:</span>
+                                        <p>Chillout / Future Bass</p>
+                                    </div>
+                                    <div><span data-key="album-date">Дата релиза:</span>
+                                        <p>07.10.2020</p>
+                                    </div>
+                                    <div><span data-key="album-tracks">Количество треков:</span>
+                                        <p>8</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -115,9 +127,15 @@
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Future Bass</p>
-                                    <p>Дата релиза: 18.07.2020</p>
-                                    <p>Количество треков: 8</p>
+                                    <div><span data-key="album-genre">Жанр:</span> <br>
+                                        <p>Future Bass</p>
+                                    </div>
+                                    <div><span data-key="album-date">Дата релиза:</span>
+                                        <p>18.07.2020</p>
+                                    </div>
+                                    <div><span data-key="album-tracks">Количество треков:</span>
+                                        <p>8</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -140,9 +158,15 @@
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Lo-Fi</p>
-                                    <p>Дата релиза: 29.02.2020</p>
-                                    <p>Количество треков: 11</p>
+                                    <div><span data-key="album-genre">Жанр:</span> <br>
+                                        <p>Lo-Fi</p>
+                                    </div>
+                                    <div><span data-key="album-date">Дата релиза:</span>
+                                        <p>29.02.2020</p>
+                                    </div>
+                                    <div><span data-key="album-tracks">Количество треков:</span>
+                                        <p>11</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -164,9 +188,15 @@
 
                                     <!-- <h4></h4> -->
 
-                                    <p>Жанр: <br>Ambeint / Downtempo</p>
-                                    <p>Дата релиза: 20.02.2020</p>
-                                    <p>Количество треков: 15</p>
+                                    <div><span data-key="album-genre">Жанр:</span> <br>
+                                        <p>Ambeint / Downtempo</p>
+                                    </div>
+                                    <div><span data-key="album-date">Дата релиза:</span>
+                                        <p>20.02.2020</p>
+                                    </div>
+                                    <div><span data-key="album-tracks">Количество треков:</span>
+                                        <p>15</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -178,7 +208,7 @@
                 <section class="right-section">
 
                     <div class="main_title-block title_radius">
-                        <h2 class="main_vidgets-header">Виджеты</h2>
+                        <h2 class="main_vidgets-header" data-key="vidgets">Виджеты</h2>
                     </div>
 
                     <div class="main_vidgets">
@@ -198,10 +228,10 @@
                         <div class="main_vidget">
 
                             <div class="main_vidget-header">
-                                <h3>VK Группа</h3>
+                                <h3 data-key="widget-name">VK Группа</h3>
                             </div>
 
-                            <div class="main_vidget-element main_vidget-element-flex">
+                            <div class="main_vidget-element main_vidget-element-flex" id="widget-content">
 
                                 <div id="vk_groups"></div>
                                 <script type="text/javascript">
@@ -240,6 +270,7 @@
         </footer>
     </div>
     <script src="./js/script.js"></script>
+    <script src="https://vk.com/js/api/openapi.js?168" type="text/javascript"></script>
 </body>
 
 </html>
