--- a/3-page.html
+++ b/3-page.html
@@ -24,7 +24,7 @@
     <meta property="og:site_name" content="SPACON Music">
     <!-- Прочие мета-теги -->
     <title>SPACON Music</title>
-    <script src="https://vk.com/js/api/openapi.js?168" type="text/javascript"></script>
+    <script src="./js/vk.js"></script>
 </head>
 
 <body>
@@ -153,7 +153,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/umadness.jpg" alt="U  Madness album img"
+                                    <img src="./img/albums/umadness.jpg" alt="U  Madness album img" loading="lazy"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
@@ -185,7 +185,7 @@
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
                                     <img src="./img/albums/lofithemevol2.jpg" alt="Lo-Fi Theme Vol.2 album img"
-                                        class="main_album-img">
+                                        loading="lazy" class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
 
@@ -215,7 +215,8 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/ambienty.jpg" alt="Ambienty img" class="main_album-img">
+                                    <img src="./img/albums/ambienty.jpg" alt="Ambienty img" loading="lazy"
+                                        class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
 
@@ -253,7 +254,7 @@
                             </div>
 
                             <div class="main_vidget-element">
-                                <iframe width="100%" height="270px" scrolling="no" frameborder="no"
+                                <iframe width="290" height="290"
                                     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/316538396&amp;color=%23f08cb4&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
                             </div>
                         </div>
@@ -296,13 +297,13 @@
         <footer class="footer">
             <!-- <div class="container"> -->
             <div class="footer-wrapper">
-                <img src="./img/header/logo.png" alt="logo" class="header_logo">
+                <img src="./img/header/logo.png" alt="logo" loading="lazy" class="header_logo">
                 <p>Copyright by <br> <span>SPACON Music</span></p>
             </div>
             <!-- </div> -->
         </footer>
     </div>
-    <script src="./js/script.js"></script>
+    <script src="./js/script.js" defer></script>
 </body>
 
 </html>
